# as-lab

BookKeeper/: .gitignore  CMakeLists.txt  book_keeper.cc  book_keeper.h  book_keeper_ui.cc  book_keeper_ui.h  linked_list.cc  linked_list.h  main.cc  node.h
ImageConverter/: ImageConverter.cpp  ImageConverter.sln  ImageConverter.vcxproj  ImageConverter.vcxproj.filters
LinkedListConsole/: CMakeLists.txt  linked_list.cc  linked_list.h  linked_list_console.cc  linked_list_console.h  node.h
ML/CNN/: .gitignore  car_cnn.py  car_resnet.py  cnn_test.py  create_labels_csv.py  create_labels_csv_balanced.py  mnist_cnn.py  mnist_cnn_model.pth  pyproject.toml  출력.txt
ML/ConvolutionConverter/: ConvolutionConverter.sln
ML/ConvolutionConverter/Convolution/: Convolution.vcxproj  Convolution.vcxproj.filters  ConvolutionConverter.cpp  convolution_output.txt  pooling_output.txt
ML/ConvolutionConverter/ImageConverter/: ImageConverter.cpp  ImageConverter.vcxproj  ImageConverter.vcxproj.filters
ML/MLP/: do_learn.ps1  mlp.py  mlp_cuda.py  mlp_lesson_mnist.py  mlp_lesson_one.py  mlp_lesson_three.py  mlp_lesson_two.py  mnist_check.py  mnist_image.py  mnist_image_cuda.py  mnist_junho.py  mnist_learn.py  mnist_mlp_model.db  mnist_pytorch.py  mnist_pytorch_check.py  mnist_test.py  pyproject.toml
ML/MLP/mnist_training/: mlp_cuda.py  mnist_check.py  mnist_image_cuda.py  mnist_learn.py  mnist_test.py
ML/SLP/: and_gate.py  or_gate.py  pyproject.toml  slp_graph.py  slp_test.py
ML/iris-dataset/: compare_data.py  get_statistics.py  iris_linear_regression.py  k-mean-compare.py  k-mean-mac.py  k-mean.py  linear_regression.py  pyproject.toml
ML/yolo/: batch_image_test_traffic.py  cam_test.py  human_detection.py  image_test.py  image_test_traffic.py  pyproject.toml
Notepad/: Notepad.cpp  Notepad.rc  Notepad.sln  Notepad.vcxproj  Notepad.vcxproj.filters  framework.h  resource.h
NotepadMFC/: CTextManager.cpp  CTextManager.h  ChildView.cpp  ChildView.h  MainFrm.cpp  NotepadMFC.cpp  NotepadMFC.h  NotepadMFC.rc  NotepadMFC.sln  NotepadMFC.vcxproj  NotepadMFC.vcxproj.filters  Resource.h  framework.h
NotepadMFC/res/: NotepadMFC.rc2
NotepadReinvention/: InputHandler.h  NotepadReinvention.cpp  NotepadReinvention.rc  NotepadReinvention.sln  NotepadReinvention.vcxproj  NotepadReinvention.vcxproj.filters  TextManager.cpp  TextManager.h  framework.h  resource.h
Paint/: Paint.cpp  Paint.h  Paint.rc  Paint.sln  Paint.vcxproj  Paint.vcxproj.filters  Resource.h  framework.h
PaintMFC/: ChildView.cpp  ChildView.h  ImageVector.cpp  ImageVector.h  MainFrm.cpp  PaintMFC.cpp  PaintMFC.h  PaintMFC.rc  PaintMFC.sln  PaintMFC.vcxproj  PaintMFC.vcxproj.filters  framework.h  resource.h
PharmacyApp/: PharmacyApp.cpp  PharmacyApp.sln  PharmacyApp.vcxproj  PharmacyApp.vcxproj.filters  linked_list.cc  linked_list.h  linked_list_main.cc  node.h  pharmacy.cc  pharmacy.h
PrimeThread/: prime_thread  prime_thread.c  prime_thread_v2  prime_thread_v2.c  prime_thread_v2_leak  prime_thread_v2_leak.c
ThreadPrime/: ThreadPrime.c  ThreadPrime.sln  ThreadPrime.vcxproj  ThreadPrime.vcxproj.filters  ThreadPrimeV2.c  ThreadPrimeWithMutex.c  ThreadPrimeWithoutMutex.c
Threads/: CMakeLists.txt  get_prime_multithreading.c  get_prime_multithreading_v2.c  get_prime_openmp.c
