[tool.poetry]
name = "mlp-test"
version = "0.1.0"
description = ""
authors = ["Minseok Chu <mchu7797@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
matplotlib = "^3.9.1.post1"
cupy-cuda12x = "^13.2.0"
torch = {version = "^2.4.0+cu124", source = "torch"}
torchvision = {version = "^0.19.0+cu124", source = "torch"}
torchaudio = {version = "^2.4.0+cu124", source = "torch"}
numpy = {version = "^1.26.3", source = "torch"}


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
