[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Chu Minseok <mchu7797@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
