[tool.poetry]
name = "yolo-example"
version = "0.1.0"
description = ""
authors = ["Minseok <mchu7797@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
ultralytics = "^8.2.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
